<resources>
    <string name="app_name">Transcendence</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="company_logo">Company Logo</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="number">Number</string>
    <string name="terms"><u>terms &amp; conditions</u></string>
    <string name="i_accept"><u>I accept</u></string>
    <string name="_91">+91</string>
    <string name="termsandconditions"></string>
    <string name="developed_by_rit_solution">DEVELOPED BY RIT SOLUTION</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="show_password">Show Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sentSuccessfully">Email Sent Successfully</string>


    <string name="aboutUs_one">Welcome to transcendence education &amp; home tuition Transcendence
        education is  favorite learning platform for hiring Tutors&#44; Trainers and Training Institutes&#46;
        Our mission is to help you find the right Tutor or Institute for your learning needs within
        your budget and at your preferred location&#46;</string>

    <string name="aboutUs_two">Hire the experienced Tutor and Institute&#33;</string>

    <string name="aboutUs_three">We have got the best selection of tutors, trainers and training
        institutes for you&#46; At Transcendence education &#44; the hiring decision is purely yours&#46;
        We send you trainers and institutes profiles which match your learning requirement and
        let you compare and decide whom you want to hire&#44; at a price that works for you&#33;</string>

    <string name="aboutUs_four">"Tutors &#45; It&#39;s time to showcase your skills"</string>

    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_mobile"><b>Call Mobile</b> \n 09928306870</string>
    <string name="email_us"><b>Email Us</b> \n Lokesh.sehgal1@gmail.com</string>
    <string name="send">Send</string>
    <string name="course">Course</string>
    <string name="message">Message</string>
    <string name="address">Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_request_has_been_send">Your Request has been Send\n We will contact you soon.</string>
    <string name="form">Details</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_an_account">Create an account</string>
    <string name="please_fill_the_form">Please fill the form</string>
    <string name="i_am_teacher">I am Teacher</string>
    <string name="qualification">Qualification</string>


</resources>
