<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/secondColor"
                android:gravity="center"
                android:text="@string/form"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/please_fill_the_form"
                android:textColor="@color/white" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:background="@drawable/round_shape"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="@dimen/paddingleft"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/hintColor" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/courseClass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:background="@drawable/round_shape"
                android:hint="@string/course"
                android:padding="@dimen/paddingleft"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/hintColor" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:background="@drawable/round_shape"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/paddingleft"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/hintColor" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:background="@drawable/round_shape"
                android:hint="@string/number"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/paddingleft"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/hintColor" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_margin="24dp"
                android:background="@drawable/round_shape"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="@dimen/paddingleft"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/hintColor" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_margin="24dp"
                android:background="@drawable/round_shape"
                android:hint="@string/message"
                android:inputType="textLongMessage"
                android:padding="@dimen/paddingleft"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/hintColor" />

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/invisibleTv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/your_request_has_been_send"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/secondColor"
        android:gravity="center"
        android:text="@string/developed_by_rit_solution"
        android:textColor="@android:color/white" />
</LinearLayout>