<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical"
    tools:context="ritsolutions.preetam.contact.ContactUsActivity">

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/secondColor"
        android:gravity="center"
        android:text="Transcendence Home Tutions"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logoCompany"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/logo" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:onClick="callMobile"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backdull"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="@dimen/paddingleft"
                android:text="@string/call_mobile"
                android:textColor="@color/darkText" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/backdull"
                android:contentDescription="@string/call_mobile"
                android:src="@drawable/ic_phone_white_48dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:onClick="emailUs"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backdull"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="@dimen/paddingleft"
                android:text="@string/email_us"
                android:textColor="@color/darkText" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/backdull"
                android:contentDescription="@string/email_us"
                android:src="@drawable/ic_email_white_48dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/secondColor"
        android:gravity="center"
        android:text="@string/developed_by_rit_solution"
        android:textColor="@android:color/white" />

</LinearLayout>
